# poc-gov_datamining

./: README.md  poc-gov_datamining.code-workspace
mining/: README.md  package.json
mining/demais/tecban/: README.md
mining/demais/uber/: README.md
mining/gov/executivo/esfera_estadual/: README.md
mining/gov/executivo/esfera_federal/: README.md
mining/gov/judiciario/esfera_estadual/: README.md
mining/gov/legislativo/esfera_estadual/almg/: README.md  almg_crawler.jsonl  requirements.txt
mining/gov/legislativo/esfera_estadual/almg/config/: definitions.py  setup.cfg
mining/gov/legislativo/esfera_estadual/almg/function/: __init__.py  function.json
mining/gov/legislativo/esfera_estadual/almg/scraping/scraping/spiders/: crawlers.py
mining/gov/legislativo/esfera_estadual/alsp/: .gitignore  README.md  alsp_crawler.jsonl  pyproject.toml  requirements.txt
mining/gov/legislativo/esfera_estadual/alsp/config/: definitions.py
mining/gov/legislativo/esfera_estadual/alsp/data/: README.md
mining/gov/legislativo/esfera_estadual/alsp/function/: __init__.py  function.json
mining/gov/legislativo/esfera_estadual/alsp/functions/daily_trigger/: __init__.py  function.json
mining/gov/legislativo/esfera_estadual/alsp/scraping/scraping/: settings.py
mining/gov/legislativo/esfera_estadual/alsp/scraping/scraping/spiders/: crawlers.py
mining/gov/legislativo/esfera_estadual/alto/: README.md
mining/gov/legislativo/esfera_federal/senado_federal/: README.md
mining/gov/orgaos_independentes/: README.md
