[tool.poetry]
name = "alsp"
version = "0.1.0"
description = ""
authors = ["João Kitajima <joao.kitajima@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"
azure-functions = "^1.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
